# particle-filter

./: .gitignore  README.md  particle-filter.cabal  stack.yaml
script/: plot_json_simulation.py
src/: Main.hs  Particles.hs  Simulation.hs
